tinyX-deployment/k3s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: tinyx
  labels:
    name: tinyx
